<resources>
    <string name="app_name">Sprookjesbos Duo Case</string>
    <string name="home">Home</string>
    <string name="compass">Compass</string>
    <string name="fairy_goggles">Fairy Goggles</string>
    <string name="cards">Cards</string>
    <string name="you_are_on_your_way">You are on your way</string>
    <string name="compass_picture">compass picture</string>
    <string name="compasspicture">compass</string>
</resources>